--- a/views/login.pug
+++ b/views/login.pug
@@ -1,9 +1,8 @@
 extends layouts/main
 
 block content
-    .form__containner
-        form(action=routes.login", method="post")
+    .form-container
+        form(action=routes.login, method="post")
             input(type="email", name="email", placeholder="Email")
             input(type="password", name="password", placeholder="Password")
-            input(type="submit", value="Log In")
-        
+            input(type="submit",value="Log In")
