--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -3,9 +3,11 @@ html
     head
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU", crossorigin="anonymous")
         title #{pageTitle} | #{siteName}
+        link(rel="stylesheet", href="/static/styles.css")
     body
         include ../partial/header
         main
             block content
         include ../partial/footer
+        script(src="/static/main.js")
             
