--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -38,6 +38,7 @@
                     border-radius: 5px;
                     font-size: 14px;
                     font-weight: 600;
+                    max-width: none;
                     &::placeholder{
                         font-weight: 300;
                         color: rgba(0,0,0,0.7)
