--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,11 +1,13 @@
 extends layouts/main
 
 block content
-    .form-containner
+    .form-container
         form(action=routes.editProfile, method="post")
-            label(for="avatar") Avatar
-            input(type="file", id="avatar", name="avatar")
+            .fileUpload
+                label(for="avatar") Avatar
+                input(type="file", id="avatar", name="avatar")
             input(type="text", placehloder="Name", name="name")
             input(type="email", placehloder="Email", name="email")
             input(type="submit", value="Update Profile")
-        a.form-container__link(href = routes.ChangePassword) Change Password
+        a.form-container__link(href=`/users${routes.changePassword}`)
+            button Change Password
