--- a/views/partial/socialLogin.pug
+++ b/views/partial/socialLogin.pug
@@ -1,8 +1,9 @@
 .social-Login
     button.social-login__github
-        span
-            i.fab.fa-github
-        |Continue with Github
+        a(href=routes.github)
+            span
+                i.fab.fa-github
+            |Continue with Github
     button.social-login__facebook
         span
             i.fab.fa-facebook
