--- a/views/login.pug
+++ b/views/login.pug
@@ -6,3 +6,4 @@ block content
             input(type="email", name="email", placeholder="Email", required=true)
             input(type="password", name="password", placeholder="Password")
             input(type="submit",value="Log In")
+        include partial/socialLogin
