--- a/views/partial/header.pug
+++ b/views/partial/header.pug
@@ -12,7 +12,7 @@ header.header
                     li
                         a(href=routes.join) Join
                     li
-                        a(href=routes.login) Logged in
+                        a(href=routes.login) Log in
                 else
                     li
                         a(href=`/videos${routes.upload}`) Upload
