--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -2,4 +2,7 @@ extends layouts/main
 include mixins/videoBlock
 
 block content
-    .video
+    .user-profile
+        .user-profile__header
+            img.avatar(src=user.avatarUrl)
+            h4.profile__username=user.name
