#7.1 Edit User Password

--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -1,5 +1,4 @@
 extends layouts/main
-include mixins/videoBlock
 
 block content
     .user-profile
@@ -10,5 +9,5 @@ block content
             .user-profile__btns
                 a(href=`/users${routes.editProfile}`)
                     button ✏️ Edit Profile
-                a(href=`/users${routes.ChangePassword}`)
-                    button 🔒 Change Password
+                a(href=`/users${routes.changePassword}`)
+                    button 🔒 Change Password 
