--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -2,17 +2,21 @@ mixin videoPlayer(video = {})
     .videoPlayer#jsVideoPlayer
         video(src=`/${video.src}`)
         .videoPlayer__controls
-            .videoPlayer__column                
+            .videoPlayer__column
+                    input.videoPlayer__ProgressBar#jsProgressbar(type="range", min="0", max="1", step="0.01", value="0") 
+            .videoPlayer__column
+                    span#jsPlayButton
+                        i.fas.fa-play
+            .videoPlayer__column     
                 span#jsVolumeBtn
-                    i.fas.fa-volume-up
+                        i.fas.fa-volume-up
+                input.videoPlayer__volume#jsVolume(type="range", min="0", max="1", step="0.1", value="0.5")
+            .videoPlayer__column               
                 span
                     span#currentTime 00:00:00
                     |/ 
-                    span#totalTime 00:00:00
-                input.videoPlayer__volume#jsVolume(type="range", min="0", max="1", step="0.1", value="0.5")
-            .videoPlayer__column
-                span#jsPlayButton
-                    i.fas.fa-play
+                    span#totalTime 00:00:00                              
             .videoPlayer__column
                 span#jsFullScreen
                     i.fas.fa-expand
+            
