--- a/assets/scss/partials/videoPlayer.scss
+++ b/assets/scss/partials/videoPlayer.scss
@@ -19,50 +19,77 @@
         background-color: rgba(0,0,0,0.5);
         padding: 10px;
         display: grid;
-        // grid-template-columns: repeat(5, 1fr);     
+        grid-template-columns: repeat(4, 1fr);     
+        grid-template-rows: repeat(2, 25px);
+        row-gap: 10px;
         //grid-auto-rows: 2;
-        grid-template-columns: repeat(4, 1fr);
+        //grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));        
         font-size: 16px;
-        .videoPlayer__column:first-child{
-            justify-self: center;
-            align-self: center;  
-            grid-column: 1/4;
-            grid-row: 1;
+
+        .videoPlayer__ProgressBar{
+            //justify-self: center;
+            position: absolute;
+            align-self: center;
             width: 100%;
+            top: 0px;
+            //grid-column: start;
+            #jsProgressbar{
+                display: block;
+                justify-self: center;
+                align-self: center;
+                max-width: 99.5%;
+                max-height: 100%;        
+                //height: 20px;
+                //height: 1.25rem;
+                //margin-top: 20px;
+                //margin-top: 0.125rem;
+                //border: 1px solid #aaa;
+                
+                overflow: hidden;
+                -moz-border-radius: 5px;
+                -webkit-border-radius: 5px;
+                border-radius: 5px;
+                margin-right: 5%;
+            }
         }   
-        .videoPlayer__column:nth-child(2){
+        .videoPlayer__PlayBtn{
             justify-self: start;            
-            align-self: center;            
+            align-self: center;           
+            max-width: 50px;
             grid-row: 2;
             grid-column: 1;
         }
-        .videoPlayer__column:nth-child(3){
+        .videoPlayer__VolumnBtn{
             grid-row: 2;
-            grid-column: 2;
+            max-width: 50px;
+            position: absolute;
+            margin-left: 50px;
             #jsVolumeBtn{
                 margin-right: 10px;
             }            
             span:last-child{
                 bottom: 0px;
             }
+            &:hover{
+                .videoPlayer__volume{
+                    opacity: 1;
+                }
+            }
+
+            &:hover + .videoPlayer__PlayTime{
+                margin-left: 180px;
+            }
+
         }
-        .videoPlayer__column:nth-child(4){
-            display: flex;
-            justify-self: start;      
-            align-self: center;      
-            grid-row: 2;
-            grid-column: 3;
-            
-        }                  
         .videoPlayer__volume{
             position: absolute;
             padding: 0;
-            opacity: 1;
-            top: -60px;
-            left: -25px;
-            transform: rotate(-90deg);
+            opacity: 0;
+            //top: -60px;
+            left: 30px;
+            //transform: rotate(-90deg);
             z-index: 10;
-            width: 80px;
+            width: 100px;
             input{
                 background-color: rgba(0,0,0,0.7);
                 &::-webkit-slider-runnable-track{
@@ -80,11 +107,21 @@
                 }
             }
         }
-        
-        .videoPlayer__column:last-child {
+
+        .videoPlayer__PlayTime{
+            display: flex;
+            justify-self: start;      
+            align-self: center;      
+            position: absolute;
+            
+            grid-row: 2;
+            margin-left: 90px;
+            bottom: 15px;
+        }               
+        .videoPlayer__FullScreenBtn {
             justify-self: end;
-            grid-row: end;
-            grid-column: end;
+            grid-row: 2;
+            grid-column: 4;
         }        
         i{
             font-size: 25px;
